# OCAD

./: .gitignore  BFD_ML_PIPELINE_REPORT.md  CLAUDE.md  DATA_GENERATION_ARGUMENT_VERIFICATION.md  Design-4.md  ML_PIPELINE_VALIDATION_REPORT.md  PRD-4.md  PR_MERGE_MESSAGE.md  README.md  pyproject.toml  requirements.txt  test_udp_echo_model.py
config/: example.yaml  plugins.example.yaml  plugins.yaml
docs/: AI-Models-Guide.md  ALL_PROTOCOLS_DATA_QUALITY_ANALYSIS.md  API.md  BFD_FIX_PERFORMANCE_COMPARISON.md  BFD_REPORT_ANALYSIS_CORRECT_DIAGNOSIS.md  BFD_REPORT_QUALITY_ANALYSIS.md  CFM-Data-Requirements.md  Directory-Structure-Cleanup.md  File-Based-Input-Implementation-Summary.md  ML_PIPELINE_TRAIN_INFERENCE_CONSISTENCY_SUMMARY.md  PHASE1-QUICKSTART.md  PHASE3-COMPLETION-REPORT.md  PHASE4-COMPLETION-REPORT.md  PHASES-OVERVIEW.md  PROGRESS-REPORT-20251030.md  PROTOCOL-ANOMALY-DETECTION-PLAN.md  Phase1-Implementation-Summary.md  Phase3-Implementation-Summary.md  QUICK-STATUS.md  Quick-Start-Guide.md  README.md  Refactoring-Plan.md  SCRIPTS-GUIDE.md  TODO.md  TOMORROW-PHASE3-GUIDE.md  TOMORROW-QUICKSTART.md  Training-Inference-Separation-Design.md
docs/00-project-design/: README.md  Tasklist-4.md  explain-4.md
docs/01-getting-started/: Quick-Start-Guide.md
docs/02-user-guides/: Logging-Guide.md  Operations-Guide.md  Plugin-Tutorial.md  Training-Inference-Workflow.md
docs/03-data-management/: Data-Format-Specification.md  Data-Source-Guide.md
docs/04-training-inference/: Inference-Guide.md  Overview.md  Training-Guide.md
docs/05-architecture/: Data-Source-Abstraction-Design.md  Plugin-Architecture.md  Training-Inference-Separation-Design.md
docs/06-plugins/: Plugin-User-Guide.md
docs/07-development/: Plugin-Development-Guide.md
docs/archive/: DOCS-REORGANIZATION-COMPLETE.md  DOCS-REORGANIZATION-PLAN.md  PADIT-IMPLEMENTATION-GUIDE.md  PADIT-NEXT-STEPS.md  PADIT-SERVICES-IMPLEMENTATION.md  PLATFORM-DESIGN-PROPOSAL.md  README-UPDATE-PLAN.md
ocad/: __init__.py  cli.py  main.py
ocad/alerts/: __init__.py  manager.py
scripts/: compatibility_check.py  create_demo_anomaly_result.py  create_multivariate_anomaly_demo.py  dashboard_test.py  generate_all_ml_data.sh  generate_bfd_data.py  generate_bfd_ml_data.py  generate_bgp_data.py  generate_bgp_ml_data.py  generate_cfm_ml_data.py  generate_datasets.py  generate_excel_sample.py  generate_inference_report.py  generate_long_format_sample.py  generate_ptp_data.py  generate_ptp_ml_data.py  generate_sample_data.py  generate_sample_report.py  generate_test_data.py  generate_training_data.py  generate_training_inference_data.py  infer.sh  infer_bfd.py  infer_bgp.py  infer_cfm.py  infer_cfm_isoforest.py  infer_ptp.py  inference_simple.py  inference_with_report.py  make_dataset.sh  prepare_multivariate_data.py  prepare_timeseries_data.py  prepare_timeseries_data_v2.py  quick_test.py  report_bfd.py  report_bgp.py  report_cfm.py  report_ptp.py  run_inference.py  scenario_test.py  (+33 more)
tests/: __init__.py
(+72 files in other folders)
