[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ocad"
description = "ORAN CFM-Lite AI Anomaly Detection System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OCAD Team", email = "ocad@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.1",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "torch>=2.1.1",
    "tensorflow>=2.14.0",
    "ruptures>=1.1.8",
    "statsmodels>=0.14.0",
    "scipy>=1.11.4",
    "ncclient>=0.6.15",
    "paramiko>=3.3.1",
    "xmltodict>=0.13.0",
    "lxml>=4.9.3",
    "kafka-python>=2.0.2",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.13.1",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "typer>=0.9.0",
    "rich>=13.7.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]
ml = [
    "xgboost>=2.0.1",
    "lightgbm>=4.1.0",
]

[project.scripts]
ocad = "ocad.cli:main"

[tool.setuptools_scm]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ocad",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
